# time-budgeting

./: .gitignore  README.md  git-history.sh  populate-data.py  sql-based-populate.py
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  models.py  run.py
backend/app/routes/: budgets.py  categories.py  groups.py  transactions.py  user.py  users.py
frontend-cli/: __init__.py  api.py  helpers.py  model.py  view.py
frontend-cli/operations/: budget.py  category.py  group.py  transaction.py  user.py
