[project]
name = "backend"
version = "0.1.0"
description = "Flask API with PostgreSQL to serve time budgeting data"
requires-python = ">=3.9"
dependencies = [
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "Flask-Migrate>=4.0.5",
]

[project.scripts]
run-backend = "app.run:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
